# labeler

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  drain3.ini  fly.toml  pyproject.toml
.github/workflows/: test.yml
labeler/: batch_data.py  device.py  evaluator.py  input_processor.py  log_processor.py  main.py  model_evaluator.py  model_trainer.py  preprocessor.py  tokenizer.py  trainer.py
labeler/cli/: main.py
labeler/parser/: logger.py  miner.py  processor.py  service.py
labeler/parser/cli/: main.py
labeler/ws/: api.py
log_parser/: Dockerfile  README.md  drain3_state.json  pyproject.toml
log_parser/parser/: processor.py  service.py
log_parser/parser/cli/: main.py
log_parser/tests/: test_processor.py  test_service.py
preprocessor/cli/: main.py
tests/: .gitignore  conftest.py  test_batching.py  test_input_processor.py  test_preprocessing.py  test_processor.py  test_service.py  test_trainer.py
tests/fixtures/doctype/: labels.csv
tests/fixtures/doctype/html/: 0.html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  aye-aye.html  fennec_fox.html  platypus.html  red_panda.html  slow_loris.html
tests/fixtures/doctype/json/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  african_elephant.json  arctic_fox.json  bengal_tiger.json  giant_panda.json  giraffe.json  grey_wolf.json  more_and_more_mammals.json  more_mammals.json
tests/fixtures/doctype/md/: 0.md  1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  dolphin.md  giraffe.md  platypus.md  red_panda.md  slow_loris.md
tests/fixtures/doctype/yaml/: 0.yaml  1.yaml  2.yaml  4.yaml  6.yaml  7.yaml  8.yaml  9.yaml  african_elephant.yaml  blue_whale.yaml  giraffe.yaml  grizzly_bear.yaml  hippopotamus.yaml  polar_bear.yaml  rhinoceros.yaml  siberian_tiger.yaml
tests/fixtures/weebl/: process.py
token_labeler/: pyproject.toml
token_labeler/label_studio/: fly.toml
uploader/cli/: main.py
