[tool.poetry]
name = "labeler"
version = "0.1.0"
description = ""
authors = ["Matias Piipari <matias.piipari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.27.2"
torch = "^2.0.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
asgiref = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[tool.pyright]
include = [
    "labeler/**/*.py",
]

typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
