[tool.poetry]
name = "labeler"
version = "0.1.0"
description = ""
authors = ["Matias Piipari <matias.piipari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.27.2"
torch = "^2.0.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
asgiref = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"

[tool.pyright]
include = [
    "labeler/**/*.py",
]

typeCheckingMode = "strict"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
]