[tool.poetry]
name = "log-parser"
version = "0.1.0"
description = ""
authors = ["Matias Piipari <matias.piipari@gmail.com>"]
readme = "README.md"
packages = [{include = "parser"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
redis = "^4.5.4"
drain3 = "^0.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
